--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-color: #97a4b7;
+  background-image: linear-gradient(180deg, #97a4b7 0%, #80a7d4 100%);
 }
 
 code {
