--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.app-wrapper{
     margin: 0 auto;
     width: 1200px;
     display: grid;
@@ -8,4 +8,9 @@
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
+}
+
+.app-wrapper-content {
+    grid-area: content;
+
 }
