--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
   background-color: #97a4b7;
+  background: no-repeat center center fixed;
   background-image: linear-gradient(180deg, #97a4b7 0%, #80a7d4 100%);
 }
 
