--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,4 +3,15 @@
     background-color: #000;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.loginBlock {
+    margin-right: 6%;
+    color:aliceblue;
+}
+
+.loginBlock a {
+    color: aliceblue;
+    text-decoration: none;
 }
