taked out (initializing app logic)/hooked up redux devtools

--- a/src/components/common/FormsControl/FormsControl.module.css
+++ b/src/components/common/FormsControl/FormsControl.module.css
@@ -7,4 +7,12 @@
 
 .formControl.error span{
     color: red;
+    font-size: 26px;
+}
+
+.formSummaryError {
+    border: red 2px solid;
+    padding: 5px;
+    color: red;
+    font-size: 26px;
 }
